<resources>
    <string name="app_name">Pastries Palace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pastries_palace">Pastries Palace</string>
    <string name="your_favorite_bakery">Your Favorite Bakery</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="not_registered">Not Registered?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="product_name">Product Name</string>
    <string name="_4_5">4.5</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="description">Description</string>
    <string name="dinner">Dinner</string>
    <string name="name">Name</string>
    
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="_120_0">120.0</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="make_order">Make Order</string>
</resources>