<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="130dp"
            android:id="@+id/detailed_img"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/cake3"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">


            <TextView
                android:singleLine="true"
                android:maxLines="1"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/amarante"
                android:id="@+id/detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/detailed_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:singleLine="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/splash"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.0"
                    android:textStyle="bold"
                    android:id="@+id/detailed_rating"/>

                <ImageView
                    android:src=""
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/_10_00_7_00"
                    android:textStyle="bold"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src=""
                    app:layout_constraintBottom_toBottomOf="@+id/detailed_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/detailed_price"
                    app:tint="@color/purple_500"/>

                <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120_0"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />
                
                <Button
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/amarante"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>